--- a/index.html
+++ b/index.html
@@ -13,19 +13,16 @@
 	<div class="top" ng-controller="MainCtrl">
 		<li class="user" ng-repeat="user in users| orderBy :random" ng-class="{like : user.like , nope : user.nope}">
 			<div class="image"><img src="{{user.images}}" ng-model="img" alt=""></div>
-			<h2 id="namae">{{user.firstname}}  {{user.lastname}}</h2>
-			<p>ログイン時間</p>
+			<h2 class="namae">{{user.firstname}}  {{user.lastname}}</h2>
+			<p class="login">ログイン時間</p>
 			<button type="" ng-click="like()">好きです！</button>
 			<button type="" ng-click="nope()">嫌いです！</button>
 		</li>
 		<button type="" id="square">ボタン</button>
 		<div class="pre">
-		<pre >{{likeusers}}</pre>
+		<pre>{{likeusers}}</pre>
 		<pre>{{nopeusers}}</pre>
 		</div>
 	</div>
-
-	<script src="jquery-1.12.4.min.js"></script>
-	<script src="jq.js"></script>
 </body>
 </html>
