--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
 	<div class="top" ng-controller="MainCtrl">
-		<li class="user" ng-repeat="user in users| orderBy :random" ng-class="{like : user.like , nope : user.nope}">
+		<li class="user" ng-repeat="user in users| orderBy :random">
 			<div class="image"><img src="{{user.images}}" ng-model="img" alt=""></div>
-			<h2 class="namae">{{user.firstname}}  {{user.lastname}}</h2>
+			<h2 class="namae" ng-model="namae">{{user.firstname}}  {{user.lastname}}</h2>
 			<p>ログイン時間</p>
 			<div login="like()">すきだよ</div>
-			<button type="" ng-click="nope()">嫌いです！</button>
+			<div login="like()">嫌いです！</div>
 		</li>
 		<button type="" id="square">ボタン</button>
 		<div class="pre">
