--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="angular.min.js"></script>
 	<script src="angular-resource.js"></script>
+	<script src="angular-animate.min.js"></script>
+	<script src="angular-touch.min.js"></script>
 	<script src="common.js"></script>
 </head>
 <body>
 
 	<div class="top" ng-controller="MainCtrl">
-		<li class="user" ng-repeat="user in users| orderBy :random">
+		<li class="user" ng-repeat="user in users| orderBy :random" ng-swipe-left="like()" ng-swipe-right="nope()">
 			<div class="image"><img src="{{user.images}}" ng-model="img" alt=""></div>
 			<h2 class="namae" ng-model="namae">{{user.firstname}}  {{user.lastname}}</h2>
 			<p>ログイン時間</p>
 			<div login="like()">すきだよ</div>
-			<div login="like()">嫌いです！</div>
+			<div login="nope()">嫌いです！</div>
 		</li>
 		<button type="" id="square">ボタン</button>
 		<div class="pre">
