ボタンのdraggableのスマホ対応

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja" ng-app="mySwipe">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
 	<title>Swipeアニメーション</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="angular.min.js"></script>
@@ -29,6 +30,7 @@
 
 	<script src="jquery-1.12.4.min.js"></script>
 	<script src="jquery-ui.min.js"></script>
+	<script src="jquery.ui.touch-punch.min.js"></script>
 	<script>
 		$(function(){
 			$("#drag").draggable();
